# matching-engine

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: engine.rs
docs/: profile.md  tuning.md
results/linux/: 20260305T213615.txt  20260310T030209.txt  20260310T045524.txt
results/mac/: 20260305T201920.txt  20260305T202119.txt  20260305T212919.txt  20260305T213543.txt  20260306T001509.txt  20260306T001953.txt  20260310T013158.txt  20260310T044620.txt  20260310T044658.txt  20260310T044907.txt  20260310T053552.txt  20260310T054758.txt  20260310T054904.txt  20260311T042007.txt  20260311T042123.txt  20260311T054354.txt  20260311T054718.txt  20260311T060339.txt  20260311T082615.txt  20260311T085816.txt  20260316T065826.txt  20260316T070032.txt  20260319T035421.txt  20260319T040541.txt  20260319T040727.txt  20260319T041213.txt  20260319T041247.txt  20260319T041356.txt  20260319T041415.txt  20260319T041452.txt  20260319T042051.txt  20260319T042056.txt  20260319T042102.txt  20260319T042107.txt  20260319T042110.txt  20260319T042113.txt  20260319T042116.txt  20260319T042130.txt  20260319T042133.txt  20260319T042145.txt  (+2 more)
results/mac/20260311T054354_histograms/: Aggressive_Fill__1_lot____depth_100.csv  Aggressive_Fill__1_lot____depth_100K.csv  Aggressive_Fill__1_lot____depth_10K.csv  Cancel_Hot_Level__single_price____10000_orders_level.csv  Cancel_Hot_Level__single_price____1000_orders_level.csv  (+24 more)
results/perf.data/: perf.data
src/: arg.rs  lib.rs  main.rs  orderbook.rs  types.rs
src/bench/: harness.rs  mod.rs  scenarios.rs
(+191 files in other folders)
