[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2"
hdrhistogram = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "engine"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
